--- a/style.css
+++ b/style.css
@@ -22,9 +22,17 @@ display: flex;
 justify-content: flex-end;
 padding: 10px 60px;
 gap: 60px;
-border: 3px;
 
 
+
+}
+
+.boton1{
+    text-align: center;
+    font-family: "Inter bold";
+    color: #f1f1f1;
+    background-color: #687363
+    
 }
 
 section nav{
