--- a/style.css
+++ b/style.css
@@ -17,22 +17,50 @@ body {
 
 header nav{
 margin: auto;
-width: 50%;
+width: 100%;
 display: flex;
 justify-content: flex-end;
-padding: 10px 60px;
-gap: 60px;
+padding: 10px 80px;
+gap: 200px;
 
+.barra{
+display: flex;
+align-items: center;
+padding: 10px 20px;
+font-size: 0px;
+border: 1px solid #ccc;
+border-radius: 10px;
+margin-right: 10px;
+}
 
+.titulos{
+    display: flex;
+    float: left;
+    width: 25%;
+    gap: 20px;
+    text-align: center;
+    align-items: center;
+}
+
+.busqueda{
+    padding: 10px 20px;
+    background-color: #687363;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+}
 
 }
 
 .boton1{
-    text-align: center;
-    font-family: "Inter bold";
+    padding: 10px 20px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-family: "Inter Bold";
     color: #f1f1f1;
     background-color: #687363
-    
 }
 
 section nav{
@@ -54,7 +82,17 @@ text-align: center;
 background-color: #f1f1f1;
 box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 padding: 16px;
-text-align: center;
+border: 1px solid #f1f1f1;
+border-radius: 10px;
+}
+
+.blackborder{
+padding: 5px 85px;
+color: #f1f1f1;
+background-color: #3C3C43;
+border-radius: 10px;
+font-family: "Inter Bold";
+
 }
 
 .jumbotron{
@@ -85,3 +123,28 @@ text-align: center;
     padding: 100px 100px;
 }
 
+.footer{
+width: 80%;
+height: 40vh;
+display: flex;
+justify-content: center;
+flex-wrap: wrap;
+margin: 0 auto;
+align-items: center;
+gap: 70px;
+
+
+}
+.rounded-button {
+    background-color: #A6927B;
+    border: none;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 100px;
+}
