--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ justify-content: flex-end;
 padding: 10px 80px;
 gap: 200px;
 
+
 .barra{
 display: flex;
 align-items: center;
@@ -40,6 +41,12 @@ margin-right: 10px;
     gap: 20px;
     text-align: center;
     align-items: center;
+    cursor: pointer;
+    transition: 0.3s ease-out;
+}
+
+.titulos:hover {
+    color: #A6927B;
 }
 
 .busqueda{
@@ -49,6 +56,11 @@ margin-right: 10px;
     border: none;
     border-radius: 10px;
     cursor: pointer;
+    transition: background 0.3s ease-out;
+}
+
+.busqueda:hover {
+background-color: #3C3C43;
 }
 
 }
@@ -59,8 +71,13 @@ margin-right: 10px;
     border-radius: 10px;
     cursor: pointer;
     font-family: "Inter Bold";
+    transition: background 0.3s ease-out;
     color: #f1f1f1;
     background-color: #687363
+}
+
+.boton1:hover {
+    background-color: #3C3C43;
 }
 
 section nav{
@@ -69,6 +86,7 @@ section nav{
     gap: 32px;
     padding: unset;
 }
+
 
 .presentationcard{
 display: table;
@@ -84,6 +102,11 @@ box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 padding: 16px;
 border: 1px solid #f1f1f1;
 border-radius: 10px;
+transition: transform 0.3s ease-in-out;
+}
+
+.presentationcard:hover {
+    transform: scale(1.03);
 }
 
 .blackborder{
@@ -92,7 +115,12 @@ color: #f1f1f1;
 background-color: #3C3C43;
 border-radius: 10px;
 font-family: "Inter Bold";
+cursor: pointer;
+transition: background 0.3s ease-out;
 
+}
+.blackborder:hover {
+    background-color: #1e1e1e;
 }
 
 .jumbotron{
@@ -133,6 +161,9 @@ margin: 0 auto;
 align-items: center;
 gap: 70px;
 
+.footer-container {
+transition: background .3s ease-out;
+}
 
 }
 .rounded-button {
